Update 验证码通过配置决定是否发送
